engine-net-2/tests/negative/NegAndHom.grg
using NegAndHom;

rule testRule {
	hom(x,y);
	x:intNode;
	y:intNode;
	if{ x.val == y.val && x.val <= 3; }

	modify {}
}

rule testRuleWithNAC {
	hom(x,y);
	x:intNode;
	y:intNode;
	negative {
		if{ x.val != y.val || x.val > 3; }
	}

	modify {}
}

rule testRuleWithNAC2 {
	hom(x,y);
	x:intNode;
	y:intNode;
	negative {
	x;
	if{ x.val != y.val || x.val > 3; }
	}

	modify {}
}

rule testRuleWithNAC3 {
	hom(x,y);
	x:intNode;
	y:intNode;
	negative {
	x; y;
	if{ x.val != y.val || x.val > 3; }
	}

	modify {}
}

rule testRuleWithNAC4 {
	hom(x,y);
	x:intNode;
	y:intNode;
	negative {
		hom(x,y);
		x; y;
		if{ x.val != y.val || x.val > 3; }
	}

	modify {}
}
